k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: suokelife-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - suokelife.com
    secretName: suokelife-tls
  rules:
  - host: suokelife.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: suokelife-service
            port:
              number: 80
